--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "2.3.2",
     "style-loader": "^3.2.1",
+    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
   }
 }
